# storage/api-docs/api-docs.json
@@ -5,6 +5,30 @@
         "version": "1.0"
     },
     "paths": {
+        "/animals": {
+            "get": {
+                "tags": [
+                    "animals"
+                ],
+                "summary": "Get list of user animals.",
+                "operationId": "9a489950fd27cd9c56fd59b937d0f501",
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/AnimalListItemResource"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/dictionaries": {
             "get": {
                 "tags": [
@@ -46,6 +70,29 @@
     },
     "components": {
         "schemas": {
+            "AnimalListItemResource": {
+                "properties": {
+                    "uuid": {
+                        "type": "string"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "type": {
+                        "type": "string"
+                    },
+                    "breed": {
+                        "type": "string"
+                    },
+                    "sex": {
+                        "type": "string"
+                    },
+                    "weight": {
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
             "DictionaryTypedResource": {
                 "required": [
                     "uuid",
